--- a/src/app/components/admin/funcionario/funcionario.component.html
+++ b/src/app/components/admin/funcionario/funcionario.component.html
@@ -1,1 +1,112 @@
-<p>funcionario works!</p>
+<div class="col col-lg-12 col-centered">
+
+    <div class="card col-lg-12 bg-light col-centered">
+      <div class="card-header">
+        <!-- titulo com botão para chamar a função add() -->
+        <h3> Funcionários
+          <button type="button" style="margin-right: 0px" (click)="add()" class="text-right btn btn-outline-info btn-lg">
+            +
+          </button>
+        </h3>
+  
+        <!-- exibirá todos os departamentos selecionados pelo atributo filtroDepartamento -->
+        <ng-select [(ngModel)]="departamentoFiltro">
+          <!-- opção com valor fixo para todos e o segundo setando tanto o valor qto o rótulo para departamento.nome -->
+          <ng-option [value]="'TODOS'">TODOS</ng-option>
+          <ng-option *ngFor="let departamento of departamentos$ | async" [value]="departamento.nome">{{departamento.nome}}</ng-option>
+        </ng-select>
+  
+      </div>
+      <div class="card-body col-lg-12 col-centered">
+        <!-- tabela de funcionarios -->
+        <table class="table table-striped table-hover table-bordered col-centered">
+            <!-- cabeçalho para os campos -->
+          <thead class="thead-dark">
+            <tr>
+              <th class="text-center">Foto</th>
+              <th class="text-center">Nome</th>
+              <th class="text-center">Email</th>
+              <th class="text-center">Departamento</th>
+              <th class="text-center">Função</th>
+              <th class="text-center">Ações</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- pipe para listas assincronas | async e pipe personalizado para filtrar com filter (departamentoFiltro é o parametro-filtro) -->
+            <tr *ngFor="let funcionario of funcionarios$ | async | filterDepartamento : departamentoFiltro">
+              <td class="text-center">
+                <img [src]="funcionario.foto || '/assets/imgs/no-image.png'" style="width: 100px" class="img-fluid">
+              </td>
+              <td class="text-center">{{funcionario.nome}}</td>
+              <td class="text-center">{{funcionario.email}}</td>
+              <td class="text-center">{{funcionario.departamento.nome}}</td>
+              <td class="text-center">{{funcionario.funcao}}</td>
+              <td class="text-center">
+                <button type="button" (click)="selecionaFuncionario(funcionario)" class="btn btn-success  ">
+                  <i class="fas fa-edit"></i>
+                </button>
+                <button type="button" (click)="delete(funcionario)" class="btn btn-danger  ">
+                  <i class="fas fa-trash"></i>
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <br>
+  
+        <div class="text-center">
+          <a [routerLink]="['/admin/painel']" class="btn btn-primary ">
+            <i class="fa fa-search" aria-hidden="true"></i>
+            Voltar</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- dialog que contém o formulário de funcionario -->
+  <p-dialog header="Dados do funcionário" [style]="{ width: '80vw' }" [contentStyle]="{'overflow':'visible'}"
+  [(visible)]="displayDialogFuncionario" [responsive]="true" [modal]="true">
+  <div class="ui-grid ui-grid-responsive ui-fluid" *ngIf="form.value">
+    <!-- definição dos campos -->
+    <form [formGroup]="form" class="p-fluid p-formgrid p-grid">
+      <div class="p-field p-col-12 p-md-6">
+        <label for="nome">Nome*:</label>
+        <input type="text" pInputText formControlName="nome" />
+      </div>
+
+      <div class="p-field p-col-12 p-md-6">
+        <label for="email">Email*:</label>
+        <input type="text" pInputText formControlName="email" />
+      </div>
+
+      <!-- trazer valores do Firebase com [items]="departamentos$" | async -->
+      <div class="p-field p-col-12 p-md-6">
+        <label for="departamento">Departamento*:</label>
+        <ng-select [items]="departamentos$ | async" bindLabel="nome" formControlName="departamento">
+        </ng-select>
+      </div>
+
+      <div class="p-field p-col-12 p-md-6">
+        <label for="funcao">Função:</label>
+        <input type="text" pInputText formControlName="funcao" />
+      </div>
+
+      <!-- UPLOAD DE FOTOS 
+        <div class="p-field p-col-12 p-md-6">
+        <label for="foto">Foto:</label>
+        <input type="file" #inputFile class="form-control" (change)="upload($event)" />
+        <progress style="width: 100%;" max="100" [value]="(uploadPercent | async)"></progress>
+      </div> -->
+    </form>
+  </div>
+  <!-- msg exibida com base na validação dos campos -> ativa classe CSS -->
+  <div *ngIf="form.controls['nome'].errors || form.controls['email'].errors || form.controls['departamento'].errors "
+    class="text-warning  ">*Preenchimento Obrigatório</div>
+
+    <div class="p-d-flex p-jc-end">
+      <button [disabled]="!form.valid" type="button" class="btn btn-primary " (click)="save()">
+        <i class="fas fa-check-circle"></i> {{edit ? 'Atualizar' : 'Salvar'}}
+      </button>
+    </div>
+
+</p-dialog>
