--- a/src/app/components/admin/funcionario/funcionario.component.html
+++ b/src/app/components/admin/funcionario/funcionario.component.html
@@ -35,6 +35,7 @@
             <!-- pipe para listas assincronas | async e pipe personalizado para filtrar com filter (departamentoFiltro é o parametro-filtro) -->
             <tr *ngFor="let funcionario of funcionarios$ | async | filterDepartamento : departamentoFiltro">
               <td class="text-center">
+                <!-- se nao existir valor para imagem, utilizar no-image.png -->
                 <img [src]="funcionario.foto || '/assets/imgs/no-image.png'" style="width: 100px" class="img-fluid">
               </td>
               <td class="text-center">{{funcionario.nome}}</td>
@@ -90,13 +91,13 @@
         <label for="funcao">Função:</label>
         <input type="text" pInputText formControlName="funcao" />
       </div>
-
-      <!-- UPLOAD DE FOTOS 
-        <div class="p-field p-col-12 p-md-6">
+ 
+      <!-- inclusao de fotos -->
+      <div class="p-field p-col-12 p-md-6">
         <label for="foto">Foto:</label>
         <input type="file" #inputFile class="form-control" (change)="upload($event)" />
         <progress style="width: 100%;" max="100" [value]="(uploadPercent | async)"></progress>
-      </div> -->
+      </div> 
     </form>
   </div>
   <!-- msg exibida com base na validação dos campos -> ativa classe CSS -->
